--- a/foundry.toml
+++ b/foundry.toml
@@ -3,8 +3,9 @@ src = "src"
 out = "out"
 optimizer = true
 libs = ["lib"]
+solc_version = "0.8.24"
 remappings = [
-            '@openzeppelin/contracts=lib/openzeppelin-contracts/contracts/', 
+            '@openzeppelin/contracts=lib/openzeppelin-contracts/contracts/',
             '@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/',
              ]
 
