--- a/foundry.toml
+++ b/foundry.toml
@@ -6,6 +6,7 @@ libs = ["lib"]
 remappings = [
             '@openzeppelin/contracts=lib/openzeppelin-contracts/contracts/', 
             '@chainlink/contracts/=lib/chainlink-brownie-contracts/contracts/',
+            '@chainlink/=lib/chainlink/contracts'
              ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
